vlib/v/checker/tests/match_expr_range_low_higher_than_high.vv
fn main() {
	value := 10
	match value {
		20...10 {}
		else {}
	}
}
